--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,38 @@
+altgraph==0.17
 astroid==2.4.2
-attrs==19.3.0
-Automat==0.8.0
 avro-python3==1.8.2
-awscli==1.18.69
-blinker==1.4
-botocore==1.16.19
+bleach==3.3.0
 certifi==2020.6.20
-chardet==3.0.4
-Click==7.0
-cloud-init==20.3
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
 confluent-kafka==1.4.0
-constantly==15.1.0
-cryptography==2.8
-dbus-python==1.2.16
 decorator==4.4.2
-distro==1.4.0
-distro-info===0.23ubuntu1
 docker==4.4.4
 docker-pycreds==0.4.0
-docutils==0.16
-entrypoints==0.3
 fastavro==1.0.0.post1
-httplib2==0.14.0
-hyperlink==19.0.0
 idna==2.10
-importlib-metadata==1.5.0
-incremental==16.10.1
+importlib-metadata==3.10.1
 isort==5.4.2
-Jinja2==2.10.1
-jmespath==0.9.4
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
 lazy-object-proxy==1.4.3
-MarkupSafe==1.1.0
 mccabe==0.6.1
-more-itertools==4.2.0
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-pexpect==4.6.0
-Pillow==7.0.0
+packaging==20.9
+pkginfo==1.7.0
 prettytable==2.1.0
 psycopg2-binary==2.8.5
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-Pygments==2.3.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
+Pygments==2.8.1
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2021.1
 pylint==2.6.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.2
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
+pyparsing==2.4.7
 python-decouple==3.3
-PyYAML==5.3.1
+readme-renderer==29.0
 requests==2.24.0
-requests-unixsocket==0.2.0
-roman==2.0.0
-rsa==4.0
-s3transfer==0.3.3
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 six==1.15.0
-sos==4.0
-ssh-import-id==5.10
-systemd-python==234
 termcolor==1.1.0
 toml==0.10.1
-Twisted==18.9.0
 typed-ast==1.4.1
-ubuntu-advantage-tools==20.3
-ufw==0.36
-unattended-upgrades==0.1
 urllib3==1.25.10
-wadllib==1.3.3
 wcwidth==0.2.5
+webencodings==0.5.1
 websocket-client==0.58.0
 wrapt==1.12.1
-zipp==1.0.0
-zope.interface==4.7.1
