--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,11 @@
-altgraph==0.17
-astroid==2.4.2
-avro-python3==1.8.2
-bleach==3.3.0
-certifi==2020.6.20
-confluent-kafka==1.4.0
-decorator==4.4.2
-docker==4.4.4
-docker-pycreds==0.4.0
-fastavro==1.0.0.post1
+certifi==2020.12.5
+chardet==4.0.0
+docker==5.0.0
 idna==2.10
-importlib-metadata==3.10.1
-isort==5.4.2
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-packaging==20.9
-pkginfo==1.7.0
 prettytable==2.1.0
-psycopg2-binary==2.8.5
-Pygments==2.8.1
-pyinstaller==4.2
-pyinstaller-hooks-contrib==2021.1
-pylint==2.6.0
-pyparsing==2.4.7
-python-decouple==3.3
-readme-renderer==29.0
-requests==2.24.0
-requests-toolbelt==0.9.1
-rfc3986==1.4.0
+requests==2.25.1
 six==1.15.0
 termcolor==1.1.0
-toml==0.10.1
-typed-ast==1.4.1
-urllib3==1.25.10
+urllib3==1.26.4
 wcwidth==0.2.5
-webencodings==0.5.1
 websocket-client==0.58.0
-wrapt==1.12.1
