--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+altgraph==0.17
 certifi==2020.12.5
 chardet==4.0.0
 docker==5.0.0
 idna==2.10
 prettytable==2.1.0
+pyinstaller==4.3
+pyinstaller-hooks-contrib==2021.1
 requests==2.25.1
 six==1.15.0
 termcolor==1.1.0
